`pkg-config --cflags check` added.

--- a/Assignment 3/hash_tables/Makefile
+++ b/Assignment 3/hash_tables/Makefile
@@ -27,6 +27,7 @@ define CFLAGS
 -Wcast-qual \
 -Wenum-compare \
 -Wsizeof-pointer-memaccess \
+`pkg-config --cflags check` \
 -Wstrict-prototypes
 endef
 
